--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -2,9 +2,38 @@
 <html>
  <head>
   <meta charset=utf8>
-  <title>It works!</title>
+  <title>UniSched</title>
+  <link rel=stylesheet type=text/css href=ui.css>
+  <link href="jquery-ui.css" rel="stylesheet" type="text/css">
+  <script src=jquery-1.7.2.min.js></script>
+  <script src=jquery-ui-1.8.22.custom.min.js></script>
+  <script src=ui.js></script>
  </head>
  <body>
-  <h1>It works!</h1>
+  <div class='tabs'>
+   <ul>
+    <li><a href=#events>Events</a></li>
+    <li><a href=#groups>Groups</a></li>
+    <li><a href=#people>People</a></li>
+   </ul>
+   <div class='frame' id='events'>
+    <div class='accordion'>
+     <h3>Filters</h3>
+     <div class='filters'>
+      <div class='list'>
+      </div>
+     </div>
+     <h3>Timelines</h3>
+     <div class='timelines'>
+     </div>
+    </div>
+   </div>
+   <div class='frame' id='groups'>
+    <div class='simple list ui-widget-content ui-corner-top ui-corner-bottom ui-state-active' id='groups-list'>
+    </div>
+   </div>
+   <div class='frame' id='people'>
+   </div>
+  </div>
  </body>
 </html>
