--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -8,6 +8,7 @@
   <script src=jquery-1.7.2.min.js></script>
   <script src=jquery-ui-1.8.22.custom.min.js></script>
   <script src=ui.js></script>
+  <script src=list.js></script>
  </head>
  <body>
   <div class='tabs'>
@@ -20,8 +21,6 @@
     <div class='accordion'>
      <h3>Filters</h3>
      <div class='filters'>
-      <div class='list'>
-      </div>
      </div>
      <h3>Timelines</h3>
      <div class='timelines'>
@@ -29,8 +28,8 @@
     </div>
    </div>
    <div class='frame' id='groups'>
-    <div class='simple list ui-widget-content ui-corner-top ui-corner-bottom ui-state-active' id='groups-list'>
-    </div>
+    <ul class='list' id='groups-list'>
+    </ul>
    </div>
    <div class='frame' id='people'>
    </div>
