group info table.

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -30,6 +30,8 @@
    <div class='frame' id='groups'>
     <ul class='list' id='groups-list'>
     </ul>
+    <table class='ui-widget-content ui-corner-all' id='group-info'>
+    </table>
    </div>
    <div class='frame' id='people'>
    </div>
