People tab has been made just as Groups tab. Added buttons and search line above list of people.

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -34,6 +34,31 @@
     </table>
    </div>
    <div class='frame' id='people'>
+    <div class='column'>
+     <table class="table">
+      <tr>
+       <td>
+        <form action="">
+         <input style="width: 50px" id="add-person" type="submit" value="Add"/>
+        </form>
+       </td>
+       <td>
+        <form action="">
+         <input style="width: 50px" id="delete-person" type="submit" value="Del"/>
+        </form>
+       </td>
+       <td>
+        <form action=''>
+         <input style="width: 132px" id="search-person" type="text"/>
+        </form>
+       </td>
+      </tr>
+     </table>
+     <ul class='list' id='people-list'>
+     </ul>
+    </div>
+    <table class='ui-widget-content ui-corner-all' id='person-info'>
+    </table>
    </div>
   </div>
  </body>
