--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -27,14 +27,16 @@
      </div>
     </div>
    </div>
-   
    <div class='frame' id='groups'>
-    <ul class='list' id='groups-list'>
-    </ul>
-    <table class='ui-widget-content ui-corner-all' id='group-info'>
-    </table>
+    <div class=column>
+     <ul class='list' id='groups-list'>
+     </ul>
+    </div>
+    <div class=column>
+     <table class='ui-widget-content ui-corner-all' id='group-info'>
+     </table>
+    </div>
    </div>
-   
    <div class='frame' id='people'>
     <div id="add-person" title="Добавление записи о человеке">
     </div>
@@ -42,21 +44,11 @@
     	<p>Вы действительно хотите удалить эту запись?</p>
     </div>
     <div class='column'>
-     <table class="table">
-      <tr>
-       <td>
-        <button style="width: 50px" id="add-person-start">Add</button>
-       </td>
-       <td>
-        <button style="width: 50px" id="del-person-start">Del</button>
-       </td>
-       <td>
-        <form action=''>
-         <input style="width: 132px" id="search-person" type="text"/>
-        </form>
-       </td>
-      </tr>
-     </table>
+    <div class=toolbar>
+     <button class=tool id="add-person-start">+</button>
+     <button class=tool id="del-person-start">-</button>
+     <input id="search-person" type="text" placeholder='search'>
+    </div>
      <ul class='list' id='people-list'>
      </ul>
     </div>
