info table widget, update data in the database

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -9,6 +9,7 @@
   <script src=jquery-ui-1.8.22.custom.min.js></script>
   <script src=ui.js></script>
   <script src=list.js></script>
+  <script src=info.js></script>
   <style>
    .CSS-try:{
     background-color: #FF0000;
@@ -53,7 +54,7 @@
      </ul>
     </div>
     <div class=column>
-     <table class='ui-widget-content ui-corner-all' id='group-info'>
+     <table class='info' id='group-info'>
      </table>
     </div>
    </div>
@@ -97,7 +98,7 @@
      </ul>
     </div>
     <div class=column>
-     <table class='ui-widget-content ui-corner-all' id='person-info'>
+     <table class='info' id='person-info'>
      </table>
     </div>
    </div>
