--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -49,6 +49,7 @@
      <div class=toolbar>
       <button class=tool id="add-group-start">+</button>
       <button class=tool id="del-group-start">-</button>
+      <input type=text id='search-group' placeholder='search'>
      </div>
      <ul class='list' id='groups-list'>
      </ul>
