style upd. hello, icons!

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -48,9 +48,12 @@
     </div>
     <div class=column>
      <div class=toolbar>
-      <button class=tool id="add-group-start">+</button>
-      <button class=tool id="del-group-start">-</button>
-      <input type=text id='search-group' placeholder='search'>
+      <button class=tool id="add-group-start"><div class='ui-icon ui-icon-plusthick' style='display: inline-block;'></div></button>
+      <button class=tool id="del-group-start"><div class='ui-icon ui-icon-minusthick' style='display: inline-block;'></div></button>
+      <div class=search>
+       <input type=text id='search-group' placeholder='search'>
+       <div class='ui-icon ui-icon-search'></div>
+      </div>
      </div>
      <ul class='list' id='groups-list'>
      </ul>
@@ -86,9 +89,12 @@
     </div>
     <div class=column>
      <div class=toolbar>
-      <button class=tool id="add-person-start">+</button>
-      <button class=tool id="del-person-start">-</button>
-      <input id="search-person" type="text" placeholder='search'>
+      <button class=tool id="add-person-start"><div class='ui-icon ui-icon-plusthick' style='display: inline-block;'></div></button>
+      <button class=tool id="del-person-start"><div class='ui-icon ui-icon-minusthick' style='display: inline-block;'></div></button>
+      <div class=search>
+       <input id="search-person" type="text" placeholder='search'>
+       <div class='ui-icon ui-icon-search'></div>
+      </div>
      </div>
      <ul class='list' id='people-list'>
      </ul>
