--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -7,6 +7,7 @@
   <link href="jquery-ui.css" rel="stylesheet" type="text/css">
   <script src=jquery-1.7.2.min.js></script>
   <script src=jquery-ui-1.8.22.custom.min.js></script>
+  <script src=jquery.timers.js></script>
   <script src=ui.js></script>
   <script src=list.js></script>
   <script src=info.js></script>
