--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -8,6 +8,7 @@
   <script src=jquery-1.7.2.min.js></script>
   <script src=jquery-ui-1.8.22.custom.min.js></script>
   <script src=jquery.timers.js></script>
+  <script src=objects.js></script>
   <script src=ui.js></script>
   <script src=list.js></script>
   <script src=info.js></script>
